# ApEx2

./: CMakeLists.txt  Distance.cpp  Distance.h  Header.h  InputAndValidation.cpp  Knn.cpp  Knn.h  Main.cpp  Makefile  OutputFunctions.cpp  README.md  Sample.cpp  Sample.h  Validation.cpp  Validations.cpp  Validations.h  distances.cpp
